--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         }
 
         #showcase {
-            background: linear-gradient(rgba(10, 116, 218, 0.7), rgba(10, 116, 218, 0.7)), url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
+            background: linear-gradient(rgba(10, 116, 218, 0.7), rgba(10, 116, 218, 0.7));
             color: #fff;
             height: 400px;
             text-align: center;
